--- a/home/static/home/styles/trail.css
+++ b/home/static/home/styles/trail.css
@@ -7,10 +7,6 @@
     margin-right: 5px;
 }
 
-.trail__statistic {
-    text-align: center;
-}
-
 
 /* --- Trail Preview --- */
 
@@ -66,7 +62,7 @@
 .trail-preview__info-grid {
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 10px;
     border-top: solid 1px var(--base02);
     font-size: 80%
@@ -77,7 +73,7 @@
 
 .trail-map {
     width: 100%;
-    border-radius: 7px;
+    border-radius: 3px;
     overflow: hidden;
 }
 
@@ -95,6 +91,17 @@
     grid-column-gap: 10px;
     padding: 10px;
     border: solid 1px var(--base02);
+    border-bottom-width: 0;
     background: var(--base01);
-    border-radius: 3px;
+}
+
+.trail__statistics-grid:first-of-type {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+.trail__statistics-grid:last-of-type {
+    border-bottom-width: 1px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
