add new facebook and messenger icons

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -72,6 +72,23 @@
                 </li>
             {% endfor %}
         </ul>
+        <p><!-- empty --></p>
+        <ul class="o-flex-inline is-center">
+            <li style="padding: 0 5px;">
+                <a href="https://fb.me/mountainbikersclub">
+                    <svg width="24" height="24" class="trail__icon">
+                        <use xlink:href="#facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li style="padding: 0 5px;">
+                <a href="https://m.me/mountainbikersclub">
+                    <svg width="24" height="24" class="trail__icon">
+                        <use xlink:href="#messenger"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
     </footer>
 </div>
 <script async type="module" src="{% static "home/scripts/main.js" %}"></script>
