add mastodon and github

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -88,6 +88,20 @@
                     </svg>
                 </a>
             </li>
+            <li style="padding: 0 5px;">
+                <a href="https://mastodon.social/@cedeber">
+                    <svg width="24" height="24" class="trail__icon">
+                        <use xlink:href="#mastodon"></use>
+                    </svg>
+                </a>
+            </li>
+            <li style="padding: 0 5px;">
+                <a href="https://github.com/cedeber/mountain-bikers-club">
+                    <svg width="24" height="24" class="trail__icon">
+                        <use xlink:href="#github"></use>
+                    </svg>
+                </a>
+            </li>
         </ul>
     </footer>
 </div>
