open new tab for social links

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -75,28 +75,28 @@
         <p><!-- empty --></p>
         <ul class="o-flex-inline is-center">
             <li style="padding: 0 5px;">
-                <a href="https://fb.me/mountainbikersclub">
+                <a href="https://fb.me/mountainbikersclub" target="_blank" rel="noopener">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#facebook"></use>
                     </svg>
                 </a>
             </li>
             <li style="padding: 0 5px;">
-                <a href="https://m.me/mountainbikersclub">
+                <a href="https://m.me/mountainbikersclub" target="_blank" rel="noopener">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#messenger"></use>
                     </svg>
                 </a>
             </li>
             <li style="padding: 0 5px;">
-                <a href="https://mastodon.social/@cedeber">
+                <a href="https://mastodon.social/@cedeber" target="_blank" rel="noopener">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#mastodon"></use>
                     </svg>
                 </a>
             </li>
             <li style="padding: 0 5px;">
-                <a href="https://github.com/cedeber/mountain-bikers-club">
+                <a href="https://github.com/cedeber/mountain-bikers-club" target="_blank" rel="noopener">
                     <svg width="24" height="24" class="trail__icon">
                         <use xlink:href="#github"></use>
                     </svg>
