--- a/trail/templates/trail/edit.html
+++ b/trail/templates/trail/edit.html
@@ -37,6 +37,12 @@
                             </div>
                         </div>
                     </form>
+                    <script>
+                        (function() {
+                            const title = document.getElementById("id_name");
+                            if (title) { title.focus(); }
+                        })()
+                    </script>
                 </div>
                 <div class="cell-1of3">
                     <h2>Map</h2>
