--- a/home/static/home/styles/trail.css
+++ b/home/static/home/styles/trail.css
@@ -19,6 +19,11 @@
     box-shadow: inset 0 0 0 1px var(--base02);
 }
 
+.trail-preview:focus {
+    outline: 0;
+    box-shadow: 0 0 0 2px var(--page-background), 0 0 0 5px var(--base06);
+}
+
 .trail-preview__map {
     position: relative;
 }
