header and footer optimization

--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -4,9 +4,9 @@
 {% block title %}{% trans 'Sign in' %}{% endblock %}
 
 {% block headerlinks %}
-    <li class="has-hidden-links">
+    <div class="has-hidden-links">
         <a href="{% url 'register' %}">{% trans 'Sign up'|lower %}</a>
-    </li>
+    </div>
 {% endblock %}
 
 {% block content %}
