--- a/dashboard/templates/dashboard/register.html
+++ b/dashboard/templates/dashboard/register.html
@@ -4,9 +4,9 @@
 {% block title %}{% trans 'Create an account' %}{% endblock %}
 
 {% block headerlinks %}
-    <li class="has-hidden-links">
+    <div class="has-hidden-links">
         <a href="{% url 'login' %}">{% trans 'Sign in'|lower %}</a>
-    </li>
+    </div>
 {% endblock %}
 
 {% block content %}
