--- a/dashboard/templates/dashboard/profile.html
+++ b/dashboard/templates/dashboard/profile.html
@@ -24,7 +24,7 @@
                         </div>
                         <div>
                             {% trans 'Logout' as button_label %}
-                            {% url 'user__delete' as button_link %}
+                            {% url 'logout' as button_link %}
                             {% tpl_button button_label button_link class='is-warning' %}
                         </div>
                         {% comment %}
