--- a/home/static/home/styles/base.css
+++ b/home/static/home/styles/base.css
@@ -182,6 +182,15 @@
     display: block;
 }
 
+.main-header__menu__link {
+    color: var(--base07);
+    font-weight: 800;
+}
+
+.main-header__menu__link:not(.is-active):hover {
+    color: var(--base05);
+}
+
 /* --- Footer --- */
 
 .main-footer {
