--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -50,7 +50,7 @@
         <ul class="o-flex-inline has-gutter has-hidden-links">
             <li>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'dashboard' %}" class="main-header__logo">Mountain Bikers Club</a>
+                    <a href="{% url 'dashboard__main' %}" class="main-header__logo">Mountain Bikers Club</a>
                 {% else %}
                     <a href="{% url 'home' %}" class="main-header__logo">Mountain Bikers Club</a>
                 {% endif %}
@@ -61,8 +61,14 @@
                 <a href="{% url 'discover' %}" class="main-header__menu__link">{% trans 'Discover' %}</a>
             </li>
         </ul>
-        {% block headerlinks %}
-        {% endblock %}
+        {% if user.is_authenticated %}
+            {% include 'member/headerlinks.html' with user=user %}
+        {% else %}
+            <div class="has-semihidden-links">
+                <a href="{% url 'login' %}">{% trans 'Sign in'|lower %}</a> {% trans 'or' %}
+                <a href="{% url 'register' %}">{% trans 'Sign up'|lower %}</a>
+            </div>
+        {% endif %}
     </header>
     <main class="main-content">
         {% block content %}
