--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -1,30 +1,26 @@
 {% extends 'home/base.html' %}
 {% load i18n tpl_button %}
 
-{% block title %}Upload a GPX file{% endblock %}
-
-{% block headerlinks %}
-    {% include 'dashboard/headerlinks.html' %}
-{% endblock %}
+{% block title %}{% trans 'Create an account' %}{% endblock %}
 
 {% block content %}
     <div class="o-section">
         <div class="o-group is-large">
             <div class="o-flex-inline has-gutter">
                 <div class="cell-2of3">
-                    <h1>{% trans 'Upload a GPX file' %}</h1>
-                    <form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">
+                    <h1>{% trans 'Create an account' %}</h1>
+                    <form action="{% url 'register' %}" method="post">
                         {% csrf_token %}
                         <ul class="django__form">
                             {{ form.as_ul }}
                         </ul>
-                        {% trans 'Save' as button_label %}
+                        {% trans 'Sign up' as button_label %}
                         {% tpl_button button_label class='is-success' %}
                     </form>
                 </div>
                 <div class="cell-1of3">
-                    <h2>{% trans 'Share the fun of the trail' %}</h2>
-                    <p>{% lorem %}</p>
+                    <h2>{% trans 'Welcome' %}</h2>
+                    <p>{% trans 'Welcome to the Mountain Bikers Club.' %}</p>
                 </div>
             </div>
         </div>
