--- a/member/templates/member/headerlinks.html
+++ b/member/templates/member/headerlinks.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div>
+<div class="has-hidden-links">
     <ul class="o-flex-inline has-horizontal-gutter has-hidden-links main-header__icons">
         {% comment %}
         <li>
@@ -26,7 +26,7 @@
         {% endcomment %}
         {# FIXME svg as symbol #}
         <li>
-            <a href="{% url 'upload' %}">
+            <a href="{% url 'trail__new' %}">
                 <svg width="20" height="20" viewBox="0 0 20 20" class="svg-icon">
                     <g fill="currentColor">
                         <path d="M18.5 18h-17c-0.827 0-1.5-0.673-1.5-1.5v-10.5c0-0.352 0.119-0.856 0.276-1.171l0.553-1.106c0.206-0.413 0.71-0.724 1.171-0.724h7c0.461 0 0.964 0.311 1.171 0.724l0.553 1.106c0.038 0.077 0.191 0.171 0.276 0.171h7.5c0.827 0 1.5 0.673 1.5 1.5v10c0 0.827-0.673 1.5-1.5 1.5zM2 4c-0.086 0-0.238 0.094-0.276 0.171l-0.553 1.106c-0.088 0.176-0.171 0.527-0.171 0.724v10.5c0 0.276 0.224 0.5 0.5 0.5h17c0.276 0 0.5-0.224 0.5-0.5v-10c0-0.276-0.224-0.5-0.5-0.5h-7.5c-0.461 0-0.965-0.311-1.171-0.724l-0.553-1.106c-0.038-0.077-0.191-0.171-0.276-0.171h-7z"></path>
@@ -37,7 +37,7 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'profile' %}">
+            <a href="{% url 'member__main' username=user.username %}">
                 <svg width="20" height="20" viewBox="0 0 20 20" class="svg-icon">
                     <g fill="currentColor">
                         <path d="M9.5 11c-3.033 0-5.5-2.467-5.5-5.5s2.467-5.5 5.5-5.5 5.5 2.467 5.5 5.5-2.467 5.5-5.5 5.5zM9.5 1c-2.481 0-4.5 2.019-4.5 4.5s2.019 4.5 4.5 4.5c2.481 0 4.5-2.019 4.5-4.5s-2.019-4.5-4.5-4.5z"></path>
